--- a/kal.html
+++ b/kal.html
@@ -103,6 +103,16 @@
             margin-right: 0.5rem;
             accent-color: var(--primary-color);
         }
+	.header-app a {
+		display: inline-block; 
+		background-color: #01324E; 
+		color: white; 
+		padding: 8px 16px; 
+		border-radius: 5px; 
+		text-decoration: none; 
+		font-family: sans-serif; 
+		font-size: 14px;
+        }	    
         input[type="radio"]:focus {
             outline: 2px solid var(--primary-color);
             outline-offset: 2px;
@@ -189,6 +199,9 @@
                     </div>
                 </div>
             </div>
+	    <div style="text-align: right;" class="header-app">
+		    <a href="lien_app.apk" >Télécharger l'application Android</a>
+	    </div>		
         </div>
     </header>
 
