--- a/kal.html
+++ b/kal.html
@@ -150,6 +150,7 @@
         }
         @media (max-width: 768px) {
             .header-content { padding: 0.3rem; }
+	    .header-app a {font-size: 0.7rem; }		
             .header-top { gap: 0.5rem; }
             .logo { height: 25px; }
             .header-top h1 { font-size: 0.85rem; }
@@ -160,6 +161,7 @@
         }
         @media (max-width: 480px) {
             .header-top h1 { font-size: 0.7rem; }
+	    .header-app a {font-size: 0.7rem; }
             .logo { height: 30px; }
             .control-group span { font-size: 0.65rem; }
             .radio-label { font-size: 0.6rem; }
