--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <header>
         <div class="header-content">
             <div class="header-top">
-                <img src="logo.png" alt="Logo de l'actualité marocaine" class="logo">
+                <img src="icone.png" alt="Logo de l'actualité marocaine" class="logo">
                 <h1>L'actualité marocaine par l'intelligence artificielle</h1>
             </div>
             <div class="controls" role="group" aria-label="Options de visualisation">
