--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualisation des Pages</title>
     <meta name="description" content="L'actualité marocaine par l'intelligence artificielle">
+    <link rel = "icon" href =  "./icone.png" type = "image/x-icon"> 
     <style>
         :root {
             --primary-color: #01324E;
