--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalima.news</title>
+    <title>Kalima</title>
     <meta name="description" content="L'actualité marocaine par l'intelligence artificielle">
     <link rel = "icon" href =  "./icone.png" type = "image/x-icon"> 
     <style>
