--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalima</title>
     <meta name="description" content="L'actualité marocaine par l'intelligence artificielle">
-    <link rel = "icon" href =  "./favicon.ico" type = "image/x-icon"> 
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <meta name="keywords" content="Kalima, news, Maroc, actualité, intelligence artificielle, presse">
+    <meta name="author" content="Kalima">
+    <link rel="canonical" href="https://www.kalima.news" />
+    <meta property="og:title" content="Kalima" />
+    <meta property="og:description" content="L'actualité marocaine par l'intelligence artificielle" />
+    <meta property="og:url" content="https://www.kalima.news" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.kalima.news/icone.png" />
+    <meta property="og:image:width" content="256" />
+    <meta property="og:image:height" content="256" />
+    <meta property="og:image:type" content="image/png" />
     <style>
         :root {
             --primary-color: #01324E;
