--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </div>
             </div>
 	    <div style="text-align: right;" class="header-app">
-		    <a href="lien_app.apk" >Télécharger l'application Android</a>
+		    <a href="icone.png" download>Télécharger l'application Android</a>
 	    </div>		
         </div>
     </header>
