--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Kalima">
     <link rel="canonical" href="https://www.kalima.news" />
     <meta property="og:title" content="Kalima" />
-    <meta property="og:description" content="L'actualité marocaine par l'intelligence artificielle" />
+    <meta property="og:description" content="L'actualité par l'IA." />
     <meta property="og:url" content="https://www.kalima.news" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.kalima.news/icone.png" />
