--- a/index.html
+++ b/index.html
@@ -283,4 +283,14 @@
         });
     </script>
 </body>
+
+<footer style="text-align: center; padding:0; font-size: 0.9em; color: #666;">
+  <p>
+    © 2025 www.kalima.news • 
+    <a  href="https://www.linkedin.com/in/houssam-halmaoui/" target="_blank" rel="noopener noreferrer" style="color: #0a66c2; text-decoration: none;">
+      Contact
+    </a>
+  </p>
+</footer>
+	
 </html>
