--- a/index.html
+++ b/index.html
@@ -37,17 +37,21 @@
             margin: 0;
             padding: 0;
         }
-        html {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            color: var(--text-color);
-            line-height: 1.5;
-        }
-        body {
-            background-color: var(--background-color);
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
+    html {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--text-color);
+    line-height: 1.5;
+    height: 100%;
+    }
+
+    body {
+    background-color: var(--background-color);
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+     }
         header {
             background-color: var(--background-color);
             color: var(--primary-color);
@@ -137,7 +141,7 @@
             outline-offset: 2px;
         }
         .main-content {
-            flex-grow: 1;
+            flex: 1;
             position: relative;
         }
         .content-frame {
