--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
             </div>
 	    <div style="text-align: right;" class="header-app">
-		    <a href="icone.png" download>Télécharger l'application Android</a>
+		    <a href="Kalima_Android.apk" download>Télécharger l'application Android</a>
 	    </div>		
         </div>
     </header>
