--- a/index.html
+++ b/index.html
@@ -37,21 +37,25 @@
             margin: 0;
             padding: 0;
         }
-    html {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: var(--text-color);
-    line-height: 1.5;
-    height: 100%;
-    }
+	html {
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	color: var(--text-color);
+	line-height: 1.5;
+	height: 100%;
+	      overflow-y: auto;
 
-    body {
-    background-color: var(--background-color);
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-     }
+	}
+
+	body {
+	background-color: var(--background-color);
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	      overflow-y: auto;
+
+     	}
         header {
             background-color: var(--background-color);
             color: var(--primary-color);
@@ -142,13 +146,22 @@
         }
         .main-content {
             flex: 1;
-            position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
         }
+        .scrollable-content {
+   flex: 1;
+    overflow: auto; 
+    position: relative;
+}
         .content-frame {
-            border: none;
             width: 100%;
-            height: 100%;
-            background-color: white;
+    height: 120%; 
+    border: none;
+    background-color: white;
+
+
         }
         .loading {
             position: absolute;
@@ -231,9 +244,12 @@
     </header>
 
     <main class="main-content">
+      <div class="scrollable-content">
         <div class="loading" id="loading">Chargement...</div>
         <iframe id="content-frame" class="content-frame" title="Contenu principal de l'actualité" loading="lazy">
         </iframe>
+          </div>
+
     </main>
 	
     <footer style="text-align: center; padding:0; font-size: 0.9em; color: #666;">
