--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	color: var(--text-color);
 	line-height: 1.5;
 	height: 100%;
-	      overflow-y: auto;
+	      overflow: hidden;
 
 	}
 
@@ -53,7 +53,7 @@
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	      overflow-y: auto;
+	      overflow: hidden;
 
      	}
         header {
@@ -64,6 +64,13 @@
             z-index: 100;
             animation: fadeIn 0.6s ease-out;
         }
+        
+        header, footer {
+	    flex-shrink: 0; 
+	    background: var(--background-color);
+	  z-index: 10;
+	}
+        
         .header-content {
             max-width: 1200px;
             margin: 0 auto;
@@ -145,23 +152,27 @@
             outline-offset: 2px;
         }
         .main-content {
-            flex: 1;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+		flex: 1;
+		overflow: hidden;
+		position: relative;
         }
+        main.main-content {
+		  flex: 1 1 auto; 
+		  display: flex;
+		  flex-direction: column;
+		  overflow: hidden;
+		  position: relative;
+	}
         .scrollable-content {
-   flex: 1;
-    overflow: auto; 
-    position: relative;
-}
+		height: 100%; 
+		    overflow-y: auto;
+		    -webkit-overflow-scrolling: touch;
+	}
         .content-frame {
-            width: 100%;
-    height: 110%; 
-    border: none;
-    background-color: white;
-
-
+		width: 100%;
+		height: 110%; 
+		border: none;
+		background-color: white;
         }
         .loading {
             position: absolute;
