--- a/index.html
+++ b/index.html
@@ -175,6 +175,72 @@
 		border: none;
 		background-color: white;
         }
+
+
+    .help-icon {
+	    position: fixed;
+	    bottom: 3px;
+	    left: 3px;
+	    font-size: 1.5em;
+	    color: white; 
+	    background-color: var(--primary-color);
+	    border: 3px solid black; 
+	    border-radius: 50%; 
+	    width: 1.0em; 
+	    height: 1.0em; 
+	    display: flex;
+	    justify-content: center;
+	    align-items: center;
+	    cursor: pointer;
+	    z-index: 1000;
+	    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+	    font-weight: bold; 
+	}
+	
+	.help-icon:hover {
+	    transform: scale(1.1);
+	    background-color: #004066;
+	}
+	
+	
+	
+	.video-popup {
+	    display: none; 
+	    position: fixed;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	    background-color: rgba(0, 0, 0, 0.8);
+	    justify-content: center;
+	    align-items: center;
+	    z-index: 2000;
+	}
+	
+	.video-popup.active {
+	    display: flex;
+	}
+	
+	.video-popup video {
+	    max-width: 90%;
+	    max-height: 90%;
+	    border-radius: var(--border-radius);
+	    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+	}
+	
+	.close-video {
+	    position: absolute;
+	    top: 20px;
+	    right: 30px;
+	    color: white;
+	    font-size: 2em;
+	    cursor: pointer;
+	    background: none;
+	    border: none;
+	    padding: 0;
+	}
+
+	    
         .loading {
             position: absolute;
             top: 0;
@@ -272,6 +338,13 @@
     </a>
   </p>
     </footer>
+
+	<div class="help-icon" id="helpIcon" title="Afficher la vidéo d'aide">?</div>
+
+<div class="video-popup" id="videoPopup">
+    <video controls src="video_aide.mp4"></video>
+    <button class="close-video" id="closeVideo">&times;</button>
+</div>
 	
 
     <script>
@@ -337,7 +410,31 @@
 	  }
 	  window.addEventListener('resize', setViewportHeight);
 	  window.addEventListener('orientationchange', setViewportHeight);
-	  setViewportHeight();	    
+	  setViewportHeight();	
+	    const helpIcon = document.getElementById('helpIcon');
+		const videoPopup = document.getElementById('videoPopup');
+		const closeVideo = document.getElementById('closeVideo');
+		const helpVideo = videoPopup.querySelector('video');
+		
+		helpIcon.addEventListener('click', () => {
+		    videoPopup.classList.add('active');
+		    helpVideo.play();
+		});
+		
+		closeVideo.addEventListener('click', () => {
+		    videoPopup.classList.remove('active');
+		    helpVideo.pause();
+		    helpVideo.currentTime = 0; 
+		});
+		
+		
+		videoPopup.addEventListener('click', (event) => {
+		    if (event.target === videoPopup) {
+		        videoPopup.classList.remove('active');
+		        helpVideo.pause();
+		        helpVideo.currentTime = 0;
+		    }
+		});
     </script>
 </body>
 
